Fixed background color stretching

--- a/x-pack/plugins/upgrade_checkup/public/index.scss
+++ b/x-pack/plugins/upgrade_checkup/public/index.scss
@@ -1,5 +1,10 @@
 @import 'ui/public/styles/_styling_constants';
 
+upgrade-checkup {
+  background-color: $euiColorLightestShade;
+  flex-grow: 1;
+}
+
 .upgrade-checkup__deprecation-cell {
   border: 1px solid #D9D9D9;
   padding: 10px;
